force-app/main/default/objects/VDT_Vault_Document_Column__mdt/VDT_Vault_Document_Column__mdt.object-meta.xml
<CustomObject>
    <label>VDT Vault Document Column</label>
    <pluralLabel>VDT Vault Document Columns</pluralLabel>
</CustomObject>