force-app/main/default/objects/VDT_Vault_Document_Column__mdt/fields/Sections__c.field-meta.xml
<CustomField>
    <fullName>Sections__c</fullName>
    <label>Sections</label>
    <length>150</length>
    <type>Text</type>
</CustomField>