force-app/main/default/objects/VDT_Vault_Document_Column__mdt/fields/Vault_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Vault_API_Name__c</fullName>
    <label>Vault API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>