force-app/main/default/objects/VDT_Vault_Document_Column__mdt/fields/Veeva_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Veeva_API_Name__c</fullName>
    <label>Veeva API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>